tests/Data/Base/negativekeywordsharedsets/get.api
{
    "result": {
        "NegativeKeywordSharedSets": [
            {
                "Id": 1000001,
                "Name": "This is string #2",
                "NegativeKeywords": [
                    "This is string #3",
                    "This is string #4"
                ],
                "Associated": "YES"
            }
        ],
        "LimitedBy": 1000002
    }
}